#96 fix org view on mobile

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -565,6 +565,7 @@ img.company-logo {
 .product .list-group-item .detail {
     overflow: auto;
     margin: 10px 0;
+    margin-bottom: 85px;
 }
 .product .list-group-item .specifications {
     margin-top: 10px;
@@ -685,10 +686,13 @@ md-chips.md-default-theme md-chip, md-chips md-chip {
 .connections.list-view, .organizations.list-view {
     max-width: 700px;
 }
-.connections img.profile {
+.list-view .list-item img.profile, .list-view .list-group img.profile {
     width: 55px;
     margin-right: 15px;
 }
 .app-modal-window .modal-dialog {
   margin-top: 45px;
+}
+.app-modal-window .modal-content {
+  padding: 0 10px;
 }
